--- a/Privacy&Policy.html
+++ b/Privacy&Policy.html
@@ -69,7 +69,7 @@
         <h2>8. Changes to This Privacy Policy</h2>
         <p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page. You are advised to review this Privacy Policy periodically for any changes. Changes to this Privacy Policy are effective when they are posted on this page.</p>
 
-        <p>If you have any questions about this Privacy Policy, please contact us at [Insert Contact Information].</p>
+        <p>If you have any questions about this Privacy Policy, please contact us at support@sagasab.com.</p>
     </div>
 </body>
 </html>
